re-enabled sync for modules and pub/static

--- a/devspace.yaml
+++ b/devspace.yaml
@@ -286,9 +286,9 @@ dev:
         - .devspace/
         - .idea/
         - .vscode/
-#        - generated/
+        - generated/
 #        - modules/
-#        - var/
+        - var/
 #        - pub/static/
       uploadExcludePaths:
         - devspace.yaml
